summative.moria.Moria.scala.error
Compilation error:
Moria:3: error: ';' expected but ')' found.
  if (estFaceMur() && !estSurBiscuit()) && getX()=!0)
                                                    ^